Add User Info Route To backend
