# config/routes.rb
@@ -21,6 +21,7 @@ Rails.application.routes.draw do
   get '/api/v1/registrations/:competition_id', to: 'registration#list'
   get '/api/v1/registrations/:competition_id/admin', to: 'registration#list_admin'
   get '/api/v1/registrations/:competition_id/waiting', to: 'registration#list_waiting'
+  post '/api/v1/users', to: 'user_controller#info'
   get '/api/v1/:competition_id/payment', to: 'registration#payment_ticket'
   post '/api/v1/:competition_id/import', to: 'registration#import'
 end
